--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>No Hesi Series 2.5</title>
+    <!-- Add Inter font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Your Custom CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>felony</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum non, quam saepe possimus provident quas autem quibusdam iure error deserunt quod atque illum, dolorem natus sunt omnis minima sapiente voluptatum.</p>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">No Hesi Series 2.5</h1>
+        <div id="data-container" class="table-responsive">
+            <!-- Data from the API will be displayed here -->
+        </div>
+        <!-- Add pagination buttons -->
+        <div id="pagination" class="text-center mt-4">
+            <!-- Buttons will be dynamically added here -->
+        </div>
+    </div>
+
+    <!-- Link to your JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
